# bci-tools

./: .gitignore  .gitlab-ci.yml  LICENCE  NOTICE.md  README.md  T.gitlab-ci.yml  pyproject.toml
data/features/: mrcp_features_batch.csv  mrcp_features_trial01.csv
logs/: eeg_log.csv
notebooks/: 01_Extract_MRCP_Features copy.txt  01_Extract_MRCP_Features.ipynb  02_Visualise_MRCP_Features.ipynb
ronku/: Containerfile
src/: logger.py  preprocessor.py
src/anich_labs_bci_core.egg-info/: PKG-INFO  SOURCES.txt
src/anichlabs_bci_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/bci_core/: feature_extractor copy.py  feature_extractor.py  logger.py  mrcp_feature_extractor.py
tests/: test_feature_extractor.py  test_logger.py  test_mrcp_feature_extractor.py  test_preprocessor.py  test_processor.py
