[build-system]
requires = ["setuptools>61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anichlabs_bci_core"
version = "0.1.0"
description = "Core BCI processing tools for Anich Labs (logging, preprocessing, features)"
authors = [{name = "Anich Labs", email = "contact@anichlabs.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]